# docs/openapi_v1.yaml
@@ -555,6 +555,21 @@ paths:
             type: integer
             minimum: 1
             maximum: 100
+        - in: query
+          name: offset
+          schema:
+            type: integer
+            minimum: 0
+        - in: query
+          name: dateFrom
+          schema:
+            type: string
+            format: date-time
+        - in: query
+          name: dateTo
+          schema:
+            type: string
+            format: date-time
       responses:
         '200':
           description: Movements
